havanese-sirius/0.0.1/README.md
# havanese-sirius

Generated by SUSE AI Factory

## Metadata
- **Name**: havanese-sirius
- **Version**: 0.0.1
- **Description**: 
- **Support**: opensource
- **Tier**: certified
- **Status**: new
- **Category**: Inference

## Authors
- alessandro.festa1@suse.com (Owner)

## Stack Composition
This stack includes the following components:

- **** (google-gemma-3-1b-it): Inference model: google/gemma-3-1b-it (Version: )

## Installation
To install this stack on your Kubernetes cluster, ensure you have Helm installed and run:

```bash
helm upgrade --install havanese-sirius ./chart -n havanese-sirius --create-namespace
```

## Upgrade
To upgrade an existing installation with new values or a newer version of the chart:

```bash
helm upgrade havanese-sirius ./chart -n havanese-sirius
```

## Teardown
To remove the stack and all its components from your cluster:

```bash
helm uninstall havanese-sirius -n havanese-sirius
```
